Updated the folder structure

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Zomato Backend in Nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node index.js",
+    "dev": "nodemon --exec babel-node index.js"
   },
   "author": "Nikhil Agarwal",
   "license": "ISC",
@@ -17,7 +18,9 @@
     "nodemon": "^2.0.14"
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.0"
   }
 }
