--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://adityaGusain:adityaGusain@zomato.iem30.mongodb.net/zomato?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://AdityaGusain:AdityaGusain@zomato-master.3flxm.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
