--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb+srv://AdityaGusain:AdityaGusain@zomato-master.3flxm.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID=340910053462-dndhpbkvukd5jg5rsglnu9d7i1son355.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
