--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Nikhil Agarwal",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1033.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -17,6 +18,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.14",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0"
