--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-leaflet": "^3.2.1",
+    "react-leaflet": "^3.2.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
@@ -48,9 +48,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "devDependencies": {
