--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,9 @@
 FROM node:alpine
 
-WORKDIR /app
+WORKDIR ~/app
 
 COPY package*.json ./
-
-RUN npm i
-
+RUN npm install
 COPY . ./
 
-FROM nginx
-EXPOSE 3000
-
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+CMD ["npm", "run", "start"]
