--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 MONGO_URL=mongodb+srv://AdityaGusain:AdityaGusain@zomato-master.3flxm.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID=340910053462-dndhpbkvukd5jg5rsglnu9d7i1son355.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-AWS_S3_ACCESS_KEY=
-AWS_S3_SECRET_KEY=
+AWS_S3_ACCESS_KEY=AKIAS2KUM2FU4TJUJF7N
+AWS_S3_SECRET_KEY=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
