--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,4 +6,9 @@ COPY package*.json ./
 RUN npm install
 COPY . ./
 
+# FROM nginx
+# EXPOSE 3000
+
+# COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+
 CMD ["npm", "run", "start"]
