--- a/docker.compose.yml
+++ b/docker.compose.yml
@@ -1,10 +1,10 @@
 version: "3"
 services:
 nginix:
-restart: always
+restart: always 
 build:
-dockerfile: Dockerfile
-context: ./nginix
+  dockerfile: Dockerfile
+  context: ./nginix
 ports:
 -"3080:80"
 depends_on:
@@ -19,7 +19,20 @@ volumes:
 -/app/node_modules
 - ./server:/app
 environment:
+- MONGO_URL= mongodb+srv://HariniThandoju:yin2uFwv8pilCEHg@zomato-master.wca14.mongodb.net/Zomato?retryWrites=true&w=majority
+- GOOGLE_CLIENT_ID=914751456229-6qd4h849o0pvum7hoal78eaeuslkhg8q.apps.googleusercontent.com
+- GOOGLE_CLIENT_SECRET=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
+- AWS_S3_ACCESS_KEY=AKIARCT2EXVNE3YRGUEJ
+- AWS_S3_SECRET_KEY=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
 ports:
 -"4000:4000"
 
 client:
+build:
+  dockerfile: Dockerfile
+  context: ./client
+volumes:
+  -/app/node_modules
+  -/client:/app
+ports:
+  -"3000:3000"
