--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Zomato Backend in Nodejs",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
-    "dev": "nodemon --exec babel-node index.js",
+    "start": "babel-node build/index.js",
+    "dev": "nodemon --exec babel-node src/index.js",
     "build": "babel src -d build"
   },
   "author": "Nikhil Agarwal",
