--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,11 +5,11 @@ COPY ./package.json ./
 RUN npm install
 COPY . .
 
-ENV MONGO_URL= mongodb+srv://HariniThandoju:yin2uFwv8pilCEHg@zomato-master.wca14.mongodb.net/Zomato?retryWrites=true&w=majority
-ENV GOOGLE_CLIENT_ID=914751456229-6qd4h849o0pvum7hoal78eaeuslkhg8q.apps.googleusercontent.com
-ENV GOOGLE_CLIENT_SECRET=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
-ENV AWS_S3_ACCESS_KEY=AKIARCT2EXVNE3YRGUEJ
-ENV AWS_S3_SECRET_KEY=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
+ENV MONGO_URL= mongodb+srv://HariniThandoju123:yin2uFwvfghj8pilCEHg@zomato-master.wca14.mongodb.net/Zomato?retryWrites=true&w=majority
+ENV GOOGLE_CLIENT_ID=914751456229-6qd4h849o0pvum7hoal7fghn8eaeuslkhg8q.apps.googleusercontent.com
+ENV GOOGLE_CLIENT_SECRET=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s6N2
+ENV AWS_S3_ACCESS_KEY=AKIARCT2EXVNE3YRGfghjUEJ
+ENV AWS_S3_SECRET_KEY=gtkXNOjNJCIywMl1afghjk6W5I7a8PMEVwJ/tA4bYgLd1
 ENV NODE_ENV=production
 ENV PORT=4000
 
