--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --exec babel-node src/index.js",
     "build": "babel src -d build"
   },
-  "author": "Nikhil Agarwal",
+  "author": "Harini Thandoju",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1033.0",
